# dyncall

./: .gitignore  Cargo.toml  README.md  build.rs  dyncall_ext.cpp
mercurial/.hg/: bookmarks  dirstate
mercurial/.hg/cache/: branch2-served  hgtagsfnodes1  rbc-revs-v1  tags2
mercurial/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
mercurial/.hg/store/data/: _makefile.i  _r_e_a_d_m_e.rst.i  hg.i  pyproject.toml.i  setup.py.i  ~2ehgignore.i  ~2ehgsigs.i  ~2ehgtags.i
mercurial/.hg/store/data/contrib/: all-revsets.txt.i  base-revsets.txt.i  bdiff-torture.py.i  byteify-strings.py.i  casesmash.py.i  catapipe.py.i  check-code.py.i  check-commit.i  check-config.py.i  check-py3-compat.py.i  debugcmdserver.py.i  debugshell.py.i  dirstatenonnormalcheck.py.i  dumprevlog.i  genosxversion.py.i  heptapod-ci.yml.i  hg-ssh.i  hg-test-mode.el.i  hgclient.py.i  hgperf.i  import-checker.py.i  install-windows-dependencies.ps1.i  logo-droplets.svg.i  memory.py.i  perf.py.i  phab-clean.py.i  phab-refresh-stack.sh.i  python-hook-examples.py.i  python3-ratchet.py.i  revsetbenchmarks.py.i  showstack.py.i  simplemerge.i  synthrepo.py.i  testparseutil.py.i  undumprevlog.i
mercurial/.hg/store/data/doc/: _makefile.i  check-seclevel.py.i  docchecker.i  gendoc.py.i  hgmanpage.py.i  runrst.i
mercurial/.hg/store/data/hgdemandimport/: ____init____.py.i  demandimportpy2.py.i  demandimportpy3.py.i  tracing.py.i
mercurial/.hg/store/data/hgext/: ____init____.py.i  absorb.py.i  acl.py.i  amend.py.i  automv.py.i  beautifygraph.py.i  (+47 more)
mercurial/contrib/win32/: mercurial.ini
src/: lib.rs
(+1001 files in other folders)
