[package]
name = "dyncall" 
version = "0.1.0"
authors = ["IronThread <santinofuenteskillian@gmail.com>"]
edition = "2018"
license = "Unlicense"
readme = "README.md"
description = "Crate to approach functionality of the dyncall C library,used by many interpreted languages for dynamic calls to dlls."
repository = "https://github.com/IronThread/dyncall"
keywords = ["ffi","c","dyncall","call","dyn"]
categories = ["ffi"]

[dependencies]
libc = "0"

[build-dependencies]
cc = "1"